@@ -67,7 +67,7 @@ jobs:
           export PATH="/cygdrive/c/cx/bin:$PATH"
           cd $( cygpath -u $GITHUB_WORKSPACE )
           yes | cpan App::cpanminus || true
-          cpanm -n https://dist.wdlabs.com/Pod-Simple-Words-0.03.tar.gz
+          cpanm -n https://dist.wdlabs.com/Pod-Simple-Words-0.05.tar.gz
           cpanm -n https://dist.wdlabs.com/Test-SpellCheck-Plugin-Lang-EN-US-0.01.tar.gz
           cpanm -n Dist::Zilla
           perl -S dzil authordeps --missing | perl -S cpanm -n
