@@ -2,5 +2,5 @@
 
 cip sudo apt-get update
 cip sudo apt-get install libffi-dev libhunspell-dev
-cip exec cpanm -n https://dist.wdlabs.com/Pod-Simple-Words-0.03.tar.gz
+cip exec cpanm -n https://dist.wdlabs.com/Pod-Simple-Words-0.05.tar.gz
 cip exec cpanm -n https://dist.wdlabs.com/Test-SpellCheck-Plugin-Lang-EN-US-0.01.tar.gz
